--- a/img_cls_transfer_artic_style.ipynb
+++ b/img_cls_transfer_artic_style.ipynb
@@ -6,7 +6,7 @@
       "name": "img_cls_transfer_artic_style.ipynb",
       "provenance": [],
       "mount_file_id": "1UfUKzSDpORkRo5ynk4ZaTYLj5YJthQ79",
-      "authorship_tag": "ABX9TyP5ev/hdBRDcEm/jVr7YbSv",
+      "authorship_tag": "ABX9TyO2XUq3QC7VuFyIVew5ZrSI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j836ab5Kz5lG",
+        "colab_type": "text"
+      },
+      "source": [
+        "【数据格式】\n",
+        "\n",
+        "本代码原始数据为上传至Google drive的jpg图片。\n",
+        "\n",
+        "preprocess_image和preprocess_image_dir函数可完成图片/文件夹内图片的加载。配合K.constant函数，生成可进入神经网络的张量。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "quUD8D6fYB2_",
         "colab_type": "code",
-        "outputId": "15bf103e-1b0f-451f-b18d-11c3cb5e7147",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "15bf103e-1b0f-451f-b18d-11c3cb5e7147"
       },
       "source": [
         "import numpy as np\n",
@@ -44,7 +58,7 @@
         "\n",
         "np.random.seed(1337)  # for reproducibility"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +103,7 @@
         "img_height = 400\n",
         "img_width = int(width * img_height / height)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +133,7 @@
         "img_height = 400\n",
         "img_width = int(width * img_height / height)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +175,7 @@
         "    x = np.clip(x, 0, 255).astype('uint8')\n",
         "    return x"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -214,7 +228,7 @@
         "    x = np.clip(x, 0, 255).astype('uint8')\n",
         "    return x"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,11 +236,11 @@
       "metadata": {
         "id": "5u-EsIGmLUVK",
         "colab_type": "code",
-        "outputId": "2927ec61-d1b9-4868-986e-735239457d7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "outputId": "2927ec61-d1b9-4868-986e-735239457d7b"
       },
       "source": [
         "\"\"\"\n",
@@ -236,7 +250,7 @@
         "img_style = preprocess_image_dir(style_reference_image_path)\n",
         "print(img_style.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,11 +279,11 @@
       "metadata": {
         "id": "w32dMgvybUFp",
         "colab_type": "code",
-        "outputId": "6c3e5860-d73b-49c4-a94d-e4e19098b71e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "outputId": "6c3e5860-d73b-49c4-a94d-e4e19098b71e"
       },
       "source": [
         "\"\"\"\n",
@@ -302,7 +316,7 @@
         "print('Model loaded.')\n",
         "print(type(input_tensor))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,11 +333,11 @@
       "metadata": {
         "id": "OQA9aOw4KC_P",
         "colab_type": "code",
-        "outputId": "9ad42c19-23f0-485f-a005-50de332c35d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        }
+        },
+        "outputId": "9ad42c19-23f0-485f-a005-50de332c35d3"
       },
       "source": [
         "\"\"\"\n",
@@ -358,7 +372,7 @@
         "print('Model loaded.')\n",
         "print(type(input_tensor))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +410,7 @@
         "def content_loss(base, combination):\n",
         "    return K.sum(K.square(combination - base))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +448,7 @@
         "    size = img_height * img_width\n",
         "    return K.sum(K.square(S - C)) / (4. * (channels ** 2) * (size ** 2))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -466,7 +480,7 @@
         "    print(C)\n",
         "    return K.sum(K.square(S - C)) / (4. * (channels ** 2) * (size ** 2))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,7 +517,7 @@
         "    loss = K.sum(K.mean(K.square(S - C), axis=0)) / (4. * (channels ** 2) * (size ** 2))\n",
         "    return loss"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -531,7 +545,7 @@
         "        x[:, :img_height - 1, :img_width - 1, :] - x[:, :img_height - 1, 1:, :])\n",
         "    return K.sum(K.pow(a + b, 1.25))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,7 +601,7 @@
         "    loss += (style_weight / len(style_layers)) * sl\n",
         "loss += total_variation_weight * total_variation_loss(combination_image)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -633,7 +647,7 @@
         "    loss += (style_weight / len(style_layers)) * sl\n",
         "loss += total_variation_weight * total_variation_loss(combination_image)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -701,7 +715,7 @@
         "\n",
         "evaluator = Evaluator()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -754,7 +768,7 @@
         "    print('Image saved as', fname)\n",
         "    print('Iteration %d completed in %ds' % (i, end_time - start_time))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -762,11 +776,11 @@
       "metadata": {
         "id": "YaHgGIE5e4oE",
         "colab_type": "code",
-        "outputId": "a8c13a28-c0b2-46e3-9e01-dbb86d2f8a95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "a8c13a28-c0b2-46e3-9e01-dbb86d2f8a95"
       },
       "source": [
         "\"\"\"\n",
@@ -801,7 +815,7 @@
         "    print('Image saved as', fname)\n",
         "    print('Iteration %d completed in %ds' % (i, end_time - start_time))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,11 +920,11 @@
       "metadata": {
         "id": "cDS0OXqfTZ6D",
         "colab_type": "code",
-        "outputId": "e6b27c03-4b11-47d9-cae6-f831e0a9ed89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 659
-        }
+        },
+        "outputId": "e6b27c03-4b11-47d9-cae6-f831e0a9ed89"
       },
       "source": [
         "\"\"\"\n",
@@ -931,7 +945,7 @@
         "plt.imshow(img)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -979,11 +993,11 @@
       "metadata": {
         "id": "-rcHog8Hs3PG",
         "colab_type": "code",
-        "outputId": "00db8822-1434-40c3-d5d7-26bf1dea4489",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "00db8822-1434-40c3-d5d7-26bf1dea4489"
       },
       "source": [
         "\"\"\"\n",
@@ -1011,7 +1025,7 @@
         "plt.imshow(img)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1113,9 +1127,8 @@
         "colab_type": "text"
       },
       "source": [
-        "style（style之间的比较）, perception;\n",
-        "\n",
-        "完形（格式塔）;"
+        "文献查阅，公式；\n",
+        "既然能transfer style，那么为什能？找style量化方式"
       ]
     }
   ]
