--- a/img_classification.ipynb
+++ b/img_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "img_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNi/T2j5q8LJcqmgxarCzFm",
+      "authorship_tag": "ABX9TyPrlb14uMA9GhTkPfWywVaN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,15 +26,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DpNRaf6l2ZuJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "【数据格式】\n",
+        "\n",
+        "本代码原始数据为直接上传至colab工作路径的npy文件。（左侧 文件 - 上传）\n",
+        "\n",
+        "经过分组、预处理后可进入神经网络。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "o3B7WfJkhln5",
         "colab_type": "code",
-        "outputId": "9f15863a-eb66-40cf-b606-54981752c5c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "9f15863a-eb66-40cf-b606-54981752c5c0"
       },
       "source": [
         "import numpy as np\n",
@@ -45,7 +59,7 @@
         "from keras.optimizers import Adam\n",
         "from keras.optimizers import RMSprop"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,7 +80,7 @@
       "source": [
         "np.random.seed(1337)  # for reproducibility"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,17 +98,17 @@
       "metadata": {
         "id": "yx5_psIUQFj8",
         "colab_type": "code",
-        "outputId": "af7075bf-3b95-4a7e-c223-c22b80920dde",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "af7075bf-3b95-4a7e-c223-c22b80920dde"
       },
       "source": [
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +134,7 @@
       "source": [
         "# !pip install --upgrade tensorflow"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +158,7 @@
         "X = np.load(\"imgDataMatrix.npy\", allow_pickle=True)\n",
         "Y = np.load(\"imgNameMatrix.npy\", allow_pickle=True)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,17 +166,17 @@
       "metadata": {
         "id": "mYt8A9pdRSNt",
         "colab_type": "code",
-        "outputId": "211d75c6-f25a-4ea3-e966-21fce8ec8e1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "outputId": "211d75c6-f25a-4ea3-e966-21fce8ec8e1e"
       },
       "source": [
         "print(Y.shape)\n",
         "print(X.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +215,7 @@
         "X_test = dataRow[dataRow[:, X.shape[1]+1] == False][:, 0:X.shape[1]]\n",
         "Y_test = dataRow[dataRow[:, X.shape[1]+1] == False][:, X.shape[1]]"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -231,7 +245,7 @@
         "X_train = np.moveaxis(X_train, 1, -1)\n",
         "X_test = np.moveaxis(X_test, 1, -1)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,17 +253,17 @@
       "metadata": {
         "id": "zvvQVLDCSCTM",
         "colab_type": "code",
-        "outputId": "cede616b-59b0-4cc8-b5a3-d675c582ec24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "outputId": "cede616b-59b0-4cc8-b5a3-d675c582ec24"
       },
       "source": [
         "print(Y_test.shape)\n",
         "print(X_test.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +324,7 @@
         "              optimizer='adam',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,11 +332,11 @@
       "metadata": {
         "id": "TS9lcbX9MyKs",
         "colab_type": "code",
-        "outputId": "4598c8a6-b4e6-41f7-95f9-0b08a79371ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 329
-        }
+        },
+        "outputId": "4598c8a6-b4e6-41f7-95f9-0b08a79371ab"
       },
       "source": [
         "# 训练模型\n",
@@ -337,7 +351,7 @@
         "print('\\ntest loss: ', loss)\n",
         "print('\\ntest accuracy: ', accuracy)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
